# living-room

./: .gitignore  CLAUDE.md  index.html  living-room-spec-v1.md  package-lock.json  package.json  vite.config.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/js/: canvas.js  config.js  diary.js  imageProcessing.js  imports.js  overlay.js  room.js  settings.js  storage.js  system.js
